--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <button id="prevButton" onclick="changePage(-1)">Anterior</button>
                     <button id="nextButton" onclick="changePage(1)">Próximo</button>
                     <button id="infoButton" onclick="openModal()"><i class="fas fa-info-circle"></i></button>
+                    <p id="pageInfo" ></p> 
                 </div>
             </div>
             
@@ -85,36 +86,6 @@
                 </div>
             </div>
             
-
-
-            <div id="infoModal" class="modal">
-                <div class="modal-content">
-                    <span class="close" onclick="closeModal()">&times;</span>
-                    <h2>Informações da Tabela</h2>
-                    <br>
-                    <p><strong>Player:</strong> Nome do jogador.</p>
-                    <p><strong>Nation:</strong> País do jogador.</p>
-                    <p><strong>Position:</strong> Posição do jogador.</p>
-                    <p><strong>Squad:</strong> Nome da equipe do jogador.</p>
-                    <p><strong>Comp:</strong> Liga em que a equipa está a competir.</p>
-                    <p><strong>Age:</strong> Idade do jogador.</p>
-                    <p><strong>MP:</strong> Jogos disputados.</p>
-                    <p><strong>Min:</strong> Minutos jogados.</p>
-                    <p><strong>Goals:</strong> Golos marcados.</p>
-                    <p><strong>Assists:</strong> Assistências.</p>
-                    <p><strong>Shots:</strong> Total de remates (não inclui pênaltis).</p>
-                    <p><strong>SoT:</strong> Chutes no alvo (não inclui pênaltis).</p>
-                    <p><strong>Int:</strong> Interceptações.</p>
-                    <p><strong>TklWon:</strong> Desarmes em que a equipe do desarmador ganhou a posse de bola.</p>
-                    <p><strong>Recov:</strong> Número de bolas recuperadas.</p>
-                    <p><strong>Fls:</strong> Faltas cometidas.</p>
-                    <p><strong>CrdY:</strong> Cartões amarelos.</p>
-                    <p><strong>CrdR:</strong> Cartões vermelhos.</p>
-                    <br>
-                    <p><strong> Clica em um jogador para uma análise mais detalhada.</strong></p>
-                </div>
-
-            </div>
         </div>
         <div id="compare" class="section">
             <div class="search-container">
