added info jogador, e pequenas alterações

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <div class="navbar-left">
             <a href="#players" class="nav-link active">Players</a>
             <span class="nav-separator">|</span>
-            <a href="#compare" class="nav-link">Compare</a>
+            <a href="/compare.html" class="nav-link">Compare</a>
         </div>
         <div class="navbar-right">
             <span class="logo">FootVis</span>
         </div>
     </nav>
     <main>
-        <div id="players" class="section">
+        <div id="players" class="section active">
             <div class="content">
                 <div class="tabs">
                     <button class="tab-button active" data-section="general" onclick="showSection('general')">Geral</button>
@@ -107,20 +107,6 @@
             </div>
             
         </div>
-        <div id="compare" class="section">
-            <div class="search-container">
-                <input type="text" id="playerSearch" class="search-input" placeholder="Add Players to Compare">
-                <button class="search-button">
-                    <i class="fas fa-search"></i>
-                </button>
-                <ul id="suggestions" class="suggestions"></ul>
-            </div>
-        </div>
-
-
-
-
-
     </main>
     <footer class="footer">
         <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data and player photos
