precisa de muitas mudanças

--- a/compare.html
+++ b/compare.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-left">
-            <a href="/index.html" class="nav-link">Players</a>
+            <a href="./index.html" class="nav-link">Players</a>
             <span class="nav-separator">|</span>
             <a href="#compare" class="nav-link active">Compare</a>
         </div>
