--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="navbar-left">
             <a href="#players" class="nav-link active">Players</a>
             <span class="nav-separator">|</span>
-            <a href="/compare.html" class="nav-link">Compare</a>
+            <a href="./compare.html" class="nav-link">Compare</a>
         </div>
         <div class="navbar-right">
             <span class="logo">FootVis</span>
