--- a/player-details.html
+++ b/player-details.html
@@ -11,7 +11,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="js/player-details.js"></script>
     <link rel="stylesheet" href="css/styles.css">
-
+    <link rel="stylesheet" href="css/player-details-charts.css">
 </head>
 
 <body>
@@ -28,11 +28,32 @@
 
     <div id="players" class="section active">
         <div class="player-image-container">
-            <img id="playerImage" >
+            <img id="playerImage" src="images/player.png" alt="Player Image">
         </div>
-        <div id="commonPlayerInfo" class="player-details-container">
+        <div id="commonPlayerInfo" class="player-info-container">
+        </div>
+        <div id="GamesPlayerInfo" class="player-info-container">
         </div>
 
+        <div class="player-details-container">
+            <svg id="field" width="325" height="175"></svg>
+            <div class="tooltip" id="tooltip"></div>
+        </div>
+
+        <div class="player-details-container">
+
+            <svg id="pieChart" width="350" height="200"></svg>
+            <div id="tooltip3" style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;"></div>
+
+        </div>
+
+        <div class="player-details-container">
+
+            <svg id="barChart" width="350" height="180"></svg>
+            <div id="tooltip2" style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;"></div>
+
+
+        </div>
         <!-- Tabs for different sections -->
         <!-- <div class="tabs">
                 <button class="tab-button active" data-section="general" onclick="showSection('general')">Geral</button>
@@ -46,8 +67,15 @@
             <div id="offensive" class="player-section" style="display: none;"></div>
             <div id="defensive" class="player-section" style="display: none;"></div> -->
     </div>
+    <hr>
     <div id="radarChart"></div>
-
+    <footer class="footer">
+        <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data and player photos
+            from
+            <a href="https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats"
+                target="_blank">Kaggle</a>
+        </p>
+    </footer>
 
 </body>
 
