percentile table without percentile calc

--- a/player-details.html
+++ b/player-details.html
@@ -68,7 +68,16 @@
             <div id="defensive" class="player-section" style="display: none;"></div> -->
     </div>
     <hr>
-    <div id="radarChart"></div>
+
+    <div class="flex-container">
+        <div id="radarChart"></div> <!-- Radar chart container -->
+
+        <!-- Table container for percentile data -->
+        <div id="table-container">
+            
+        </div>
+    </div>
+
     <footer class="footer">
         <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data and player photos
             from
