--- a/player-details.html
+++ b/player-details.html
@@ -76,7 +76,17 @@
         <div id="table-container">
             
         </div>
+        <div id="heatmap-container">
+            <h2>Heatmap - Number of Tackles per 90 minutes</h2>
+            <svg id="field2" width="610" height="327"></svg>
+            <div id="scale-container">
+                <h3>Indicative Scale</h3>
+                <svg id="indicative-scale" width="610" height="50"></svg>
+            </div>
+        </div>        
     </div>
+
+    
 
     <footer class="footer">
         <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data and player photos
