--- a/player-details.html
+++ b/player-details.html
@@ -74,8 +74,7 @@
 
         <!-- Table container for percentile data -->
         <div id="table-container">
-            <div id="tooltip5" style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;"></div>
-
+            <div id="tooltip5" style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;"></div>    
         </div>
         <div id="radarChart">
             <div id="tooltip4" style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;"></div>
@@ -93,6 +92,13 @@
         </div>
               
     </div>
+
+    <div id="modal" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1000; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+        <span id="modal-close" style="position: absolute; top: 10px; right: 10px; cursor: pointer; font-size: 18px;">&times;</span>
+        <h3>Player Statistics</h3>
+        <div id="modal-content"></div>
+      </div>
+      <div id="modal-overlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 999;"></div>          
 
     
 
