--- a/player-details.html
+++ b/player-details.html
@@ -20,6 +20,8 @@
             <a href="./index.html" class="nav-link active">Players</a>
             <span class="nav-separator">|</span>
             <a href="./compare.html" class="nav-link">Compare</a>
+            <span class="nav-separator">|</span>
+            <a href="./insights.html" class="nav-link">Insights</a>
         </div>
         <div class="navbar-right">
             <span class="logo">FootVis</span>
@@ -54,18 +56,6 @@
 
 
         </div>
-        <!-- Tabs for different sections -->
-        <!-- <div class="tabs">
-                <button class="tab-button active" data-section="general" onclick="showSection('general')">Geral</button>
-                <button class="tab-button" data-section="gameInfo" onclick="showSection('gameInfo')">Game Info</button>
-                <button class="tab-button" data-section="offensive" onclick="showSection('offensive')">Offensive</button>
-                <button class="tab-button" data-section="defensive" onclick="showSection('defensive')">Defensive</button>
-            </div>
-
-            <div id="general" class="player-section" style="display: block;"></div>
-            <div id="gameInfo" class="player-section" style="display: none;"></div>
-            <div id="offensive" class="player-section" style="display: none;"></div>
-            <div id="defensive" class="player-section" style="display: none;"></div> -->
     </div>
     <hr>
 
