--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
 </head>
@@ -22,6 +21,8 @@
             <a href="#players" class="nav-link active">Players</a>
             <span class="nav-separator">|</span>
             <a href="./compare.html" class="nav-link">Compare</a>
+            <span class="nav-separator">|</span>
+            <a href="./insights.html" class="nav-link">Insights</a>
         </div>
         <div class="navbar-right">
             <span class="logo">FootVis</span>
