--- a/compare.html
+++ b/compare.html
@@ -25,24 +25,26 @@
     </nav>
     <main>
         <div id="compare" class="compare-container">
+            <!-- Left Column -->
             <div class="column">
                 <div class="player-card">
                     <h2>Player 1</h2>
                     <div class="search-container">
-                        <input type="text" id="player1Search" class="search-input" placeholder="Search Player 1">
-                        <ul id="player1Suggestions" class="suggestions"></ul>
+                        <input type="text" id="playerSearch" class="search-input" placeholder="Search Player 1">
+                        <ul id="suggestions" class="suggestions"></ul>
                     </div>
                     <div class="player-stats" id="player1Stats">
                         <p>Select a player to view their stats.</p>
                     </div>
                 </div>
             </div>
+            <!-- Right Column -->
             <div class="column">
                 <div class="player-card">
                     <h2>Player 2</h2>
                     <div class="search-container">
-                        <input type="text" id="player2Search" class="search-input" placeholder="Search Player 2">
-                        <ul id="player2Suggestions" class="suggestions"></ul>
+                        <input type="text" id="playerSearch2" class="search-input" placeholder="Search Player 2">
+                        <ul id="suggestions2" class="suggestions"></ul>
                     </div>
                     <div class="player-stats" id="player2Stats">
                         <p>Select a player to view their stats.</p>
@@ -56,7 +58,7 @@
             from <a href="https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats" target="_blank">Kaggle</a>
         </p>
     </footer>
-    <script src="js/compare.js"></script>
+    <script src="js/search_compare.js"></script>
 </body>
 
 </html>
