scatter not called

--- a/compare.html
+++ b/compare.html
@@ -72,7 +72,7 @@
             from <a href="https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats" target="_blank">Kaggle</a>
         </p>
     </footer>
-    <script src="js/search.js"></script>
+    <script src="js/search_compare.js"></script>
     <script src="js/compare.js"></script>
 </body>
 
