--- a/compare.html
+++ b/compare.html
@@ -39,12 +39,16 @@
                         <input type="text" id="playerSearch" class="search-input" placeholder="Search Player 1">
                         <ul id="suggestions" class="suggestions"></ul>
                     </div>
+                    <div class="player-image-container">
+                        <img id="playerImage" src="images/player.png" alt="Player Image 1">
+                    </div>
                     <div class="player-stats" id="player1Stats">
                         <p>Select a player to view their stats.</p>
                     </div>
                     <!-- Table container for Player 1 -->
                     <!-- <div id="player1TableContainer"></div> -->
-                    <div id="player1ScatterContainer"></div>
+                    <!-- <div id="player1ScatterContainer"></div> -->
+                    <div id="radarChart1"></div> 
                 </div>
                 
             </div>
@@ -56,12 +60,16 @@
                         <input type="text" id="playerSearch2" class="search-input" placeholder="Search Player 2">
                         <ul id="suggestions2" class="suggestions"></ul>
                     </div>
+                    <div class="player-image-container">
+                        <img id="playerImage2" src="images/player.png" alt="Player Image 2">
+                    </div>
                     <div class="player-stats" id="player2Stats">
                         <p>Select a player to view their stats.</p>
                     </div>
                     <!-- Table container for Player 2 -->
                     <!-- <div id="player2TableContainer"></div> -->
-                    <div id="player2ScatterContainer"></div>
+                    <!-- <div id="player2ScatterContainer"></div> -->
+                    <div id="radarChart2"></div> 
                 </div>
                 
             </div>
