--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <main>
         <div id="players" class="section active">
             <div class="content">
+                <h3 class="section-title">Football Players Statistics Season 2022/2023</h3>
+
                 <div class="tabs">
                     <button class="tab-button active" data-section="general"
                         onclick="showSection('general')">Geral</button>
