--- a/insights.html
+++ b/insights.html
@@ -26,7 +26,7 @@
     </div>
   </nav>
   <div class="container5">
-    <!-- Primeira Linha de Gráficos (Duas Colunas) -->
+    <h3 class="section-title">General Football Players Insights Season 2022/2023</h3>
     <div class="top-row">
       <div class="chart-section">
         <select id="chartSelector">
