radar chart with right angles

--- a/compare.html
+++ b/compare.html
@@ -74,6 +74,9 @@
                 
             </div>
         </div>
+        <!-- <div id="compareGraphics" class="compare-graphics">
+            <div id="scatterContainer"></div>
+        </div> -->
     </main>
     <footer class="footer">
         <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data and player photos
