--- a/compare.html
+++ b/compare.html
@@ -74,9 +74,10 @@
                 
             </div>
         </div>
-        <!-- <div id="compareGraphics" class="compare-graphics">
-            <div id="scatterContainer"></div>
-        </div> -->
+        <div id="compareGraphics" class="compare-graphics">
+            <!-- <div id="scatterContainer"></div> -->
+            <div id="radarChart"></div> 
+        </div>
     </main>
     <footer class="footer">
         <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data and player photos
