--- a/compare.html
+++ b/compare.html
@@ -45,10 +45,6 @@
                     <div class="player-stats" id="player1Stats">
                         <p>Select a player to view their stats.</p>
                     </div>
-                    <!-- Table container for Player 1 -->
-                    <!-- <div id="player1TableContainer"></div> -->
-                    <!-- <div id="player1ScatterContainer"></div> -->
-                    <div id="radarChart1"></div> 
                 </div>
                 
             </div>
@@ -66,16 +62,12 @@
                     <div class="player-stats" id="player2Stats">
                         <p>Select a player to view their stats.</p>
                     </div>
-                    <!-- Table container for Player 2 -->
-                    <!-- <div id="player2TableContainer"></div> -->
-                    <!-- <div id="player2ScatterContainer"></div> -->
-                    <div id="radarChart2"></div> 
                 </div>
                 
             </div>
         </div>
         <div id="compareGraphics" class="compare-graphics">
-            <!-- <div id="scatterContainer"></div> -->
+            <div id="scatterChart"></div>
             <div id="radarChart"></div> 
         </div>
     </main>
