--- a/insights.html
+++ b/insights.html
@@ -10,6 +10,9 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/insights.css">
+
+  <script src="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.js.iife.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.css" />
 </head>
 
 <body>
@@ -26,7 +29,7 @@
     </div>
   </nav>
   <div class="container5">
-    <h3 class="section-title">General Football Players Insights Season 2022/2023</h3>
+    <h3 class="section-title2">General Football Players Insights Season 2022/2023</h3>
     <div class="top-row">
       <div class="chart-section">
         <select id="chartSelector">
@@ -60,7 +63,87 @@
       <a href="https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats" target="_blank">Kaggle</a>
     </p>
   </footer>
-  <script src="js/Chart.js"></script>
+  <script src="js/insights.js"></script>
+  <script>
+
+    function startTour() {
+        const driver = window.driver.js.driver;
+        const driverObj = driver({
+            animate: false,
+            showProgress: true,
+            showButtons: ['next', 'previous', 'close'],
+            allowClose: true,
+            steps: [
+                {
+                    element: '#chartSelector',
+                    popover: {
+                        title: 'Chart Selector',
+                        description: 'Choose the type of chart you want to see here.',
+                        side: 'top'
+                    }
+                },
+                {
+                    element: '#player-stats-chart',
+                    popover: {
+                        title: 'Player Stats Chart',
+                        description: 'This chart displays the top scorers and assists leaders.',
+                        side: 'top'
+                    }
+                },
+                {
+                    element: '#other-stats-chart',
+                    popover: {
+                        title: 'Other Stats Chart',
+                        description: 'This chart displays other statistics about the players.',
+                        side: 'top'
+                    }
+                },
+                {
+                    element: '#pie-stats',
+                    popover: {
+                        title: 'Pie Stats',
+                        description: 'This pie chart shows the distribution of players by position.',
+                        side: 'top'
+                    }
+                }
+            ]
+
+
+        });
+
+        driverObj.drive();
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+        const tourButton = document.createElement('button');
+        tourButton.textContent = '?';
+        tourButton.id = 'tourButton';
+        tourButton.style.cssText = `
+            position: fixed;
+            bottom: 80px;
+            right: 50px;
+            z-index: 99999;
+            background: #007bff;
+            color: #fff;
+            border: none;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 18px;
+            font-weight: bold;
+            transition: transform 0.2s;
+        `;
+        tourButton.onmouseover = () => {
+            tourButton.style.background = '#ffa500';
+        };
+        tourButton.onmouseout = () => {
+            tourButton.style.background = '#007bff';
+        };
+        tourButton.onclick = startTour;
+        document.body.appendChild(tourButton);
+    });
+</script>
 </body>
 
 </html>
