--- a/player-details.html
+++ b/player-details.html
@@ -12,6 +12,9 @@
     <script src="js/player-details.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/player-details-charts.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.js.iife.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.css" />
 </head>
 
 <body>
@@ -45,14 +48,18 @@
         <div class="player-details-container">
 
             <svg id="pieChart" width="350" height="200"></svg>
-            <div id="tooltip3" style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;"></div>
+            <div id="tooltip3"
+                style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;">
+            </div>
 
         </div>
 
         <div class="player-details-container">
 
             <svg id="barChart" width="350" height="180"></svg>
-            <div id="tooltip2" style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;"></div>
+            <div id="tooltip2"
+                style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;">
+            </div>
 
 
         </div>
@@ -64,11 +71,15 @@
 
         <!-- Table container for percentile data -->
         <div id="table-container">
-            <div id="tooltip5" style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;"></div>    
+            <div id="tooltip5"
+                style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;">
+            </div>
         </div>
         <div id="radarChart">
-            <div id="tooltip4" style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;"></div>
-        </div> 
+            <div id="tooltip4"
+                style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;">
+            </div>
+        </div>
         <div id="heatmap-container">
             <div id="metric-selector" class="selector-container">
                 <h3 id="heatmap-title" class="heatmap-title">Tackles per 90</h3>
@@ -80,17 +91,21 @@
             <svg id="field2" width="400" height="200"></svg>
             <svg id="indicative-scale" width="400" height="50"></svg>
         </div>
-              
+
     </div>
 
-    <div id="modal" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1000; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-        <span id="modal-close" style="position: absolute; top: 10px; right: 10px; cursor: pointer; font-size: 18px;">&times;</span>
+    <div id="modal"
+        style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1000; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+        <span id="modal-close"
+            style="position: absolute; top: 10px; right: 10px; cursor: pointer; font-size: 18px;">&times;</span>
         <h3>Player Statistics</h3>
         <div id="modal-content"></div>
-      </div>
-      <div id="modal-overlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 999;"></div>          
+    </div>
+    <div id="modal-overlay"
+        style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 999;">
+    </div>
 
-    
+
 
     <footer class="footer">
         <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data and player photos
@@ -100,6 +115,134 @@
         </p>
     </footer>
 
+    <script>
+
+        function startTour() {
+            const driver = window.driver.js.driver;
+            const driverObj = driver({
+                animate: false,
+                showProgress: true,
+                showButtons: ['next', 'previous', 'close'],
+                allowClose: true,
+                steps: [
+                    {
+                        element: '#playerImage',
+                        popover: {
+                            title: 'Player Image',
+                            description: 'View the image of the selected player here.',
+                            side: 'top'
+                        }
+                    },
+                    {
+                        element: '#commonPlayerInfo',
+                        popover: {
+                            title: 'Player Info',
+                            description: 'This section displays common information about the player.',
+                            side: 'top'
+                        }
+                    },
+                    {
+                        element: '#GamesPlayerInfo',
+                        popover: {
+                            title: 'Game Stats',
+                            description: 'Here, you can find statistics related to the player\'s games.',
+                            side: 'top'
+                        }
+                    },
+                    {
+                        element: '#field',
+                        popover: {
+                            title: 'Position Visualization',
+                            description: 'This field illustrates the player\'s position or activity areas.',
+                            side: 'top'
+                        }
+                    },
+                    {
+                        element: '#pieChart',
+                        popover: {
+                            title: 'Pie Chart',
+                            description: 'Visual representation of the player\'s minutes played.',
+                            side: 'top'
+                        }
+                    },
+                    {
+                        element: '#barChart',
+                        popover: {
+                            title: 'Bar Chart',
+                            description: 'This bar chart shows the player\'s games played.',
+                            side: 'top'
+                        }
+                    },
+                    {
+                        element: '#table-container',
+                        popover: {
+                            title: 'Percentile Table',
+                            description: 'Explore percentile data for various player metrics.\n The table is interactive and allows you to sort the data. \n The percentil values are calculated based on the player\'s performance compared to other players in dataset.',
+                            side: 'top'
+                        }
+                    },
+                    {
+                        element: '#radarChart',
+                        popover: {
+                            title: 'Radar Chart',
+                            description: 'View a radar chart to compare the player\'s percentils.',
+                            side: 'top'
+                        }
+                    },
+                    {
+                        element: '#heatmap-container',
+                        popover: {
+                            title: 'Heatmap',
+                            description: 'Analyze the player\'s activity on the field using this heatmap.',
+                            side: 'top'
+                        }
+                    },
+                    {
+                        element: '#metric-dropdown',
+                        popover: {
+                            title: 'Metric Selector',
+                            description: 'Choose a metric to update the heatmap visualization.',
+                            side: 'top'
+                        }
+                    },
+                ]
+
+
+            });
+
+            driverObj.drive();
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const tourButton = document.createElement('button');
+            tourButton.textContent = '?';
+            tourButton.id = 'tourButton';
+            tourButton.style.cssText = `
+                position: fixed;
+                bottom: 80px;
+                right: 50px;
+                z-index: 99999;
+                background: #007bff;
+                color: #fff;
+                border: none;
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                cursor: pointer;
+                font-size: 18px;
+                font-weight: bold;
+                transition: transform 0.2s;
+            `;
+            tourButton.onmouseover = () => {
+                tourButton.style.background = '#ffa500';
+            };
+            tourButton.onmouseout = () => {
+                tourButton.style.background = '#007bff';
+            };
+            tourButton.onclick = startTour;
+            document.body.appendChild(tourButton);
+        });
+    </script>
 </body>
 
 </html>
